0.10.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.sphere_transport.forward.Forward.rst.txt
polaris.tasks.ocean.sphere\_transport.forward.Forward
=====================================================

.. currentmodule:: polaris.tasks.ocean.sphere_transport.forward

.. autoclass:: Forward

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~Forward.__init__
      ~Forward.add_dependency
      ~Forward.add_input_file
      ~Forward.add_model_config_options
      ~Forward.add_namelist_file
      ~Forward.add_output_file
      ~Forward.add_streams_file
      ~Forward.add_yaml_file
      ~Forward.check_properties
      ~Forward.compute_cell_count
      ~Forward.constrain_resources
      ~Forward.dynamic_model_config
      ~Forward.map_yaml_configs
      ~Forward.map_yaml_options
      ~Forward.map_yaml_streams
      ~Forward.map_yaml_to_namelist
      ~Forward.partition
      ~Forward.process_inputs_and_outputs
      ~Forward.run
      ~Forward.runtime_setup
      ~Forward.set_model_resources
      ~Forward.set_resources
      ~Forward.set_shared_config
      ~Forward.setup
      ~Forward.update_io_tasks_config
      ~Forward.update_namelist_eos
      ~Forward.update_namelist_pio
      ~Forward.validate_baselines
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Forward.component
   
   